--- a/DEU/DEUProject.Android/DEUProject.Android.csproj
+++ b/DEU/DEUProject.Android/DEUProject.Android.csproj
@@ -75,14 +75,19 @@
     <AndroidResource Include="Resources\mipmap-anydpi-v26\icon_round.xml" />
     <AndroidResource Include="Resources\mipmap-hdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-hdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-mdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
+    <AndroidResource Include="Resources\mipmap-hdpi\Icon2.jpg" />
+    <AndroidResource Include="Resources\mipmap-mdpi\Icon2.jpg" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\Icon2.jpg" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\Icon2.jpg" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon2.jpg" />
+    <AndroidResource Include="Resources\mipmap-mdpi\Icon.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
