--- a/DEU/DEUProject.Android/Properties/AndroidManifest.xml
+++ b/DEU/DEUProject.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.AK.DEU_Project">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="2.0" package="com.AK.DEU_Project">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-	<application android:label="DEUProject.Android" android:icon="@mipmap/icon2"></application>
+	<application android:label="DEU_Service" android:icon="@drawable/icon"></application>
 </manifest>
