--- a/DEUProject/DEUProject.csproj
+++ b/DEUProject/DEUProject.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Server\Interface\" />
+  </ItemGroup>
 </Project>
